--- a/public/screens/styleLogin.css
+++ b/public/screens/styleLogin.css
@@ -1,4 +1,6 @@
-.login,
+
+
+/*.login,
 .login * {
   box-sizing: border-box;
 }
@@ -9,7 +11,6 @@
   border-width: 1px;
   height: 830px;
   position: relative;
-  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
 .login2 {
   color: #ffffff;
