finalizado Login e iniciando Curso

--- a/public/screens/styleCadastro.css
+++ b/public/screens/styleCadastro.css
@@ -12,7 +12,7 @@
   border-radius: 12px;
   width: 90%;
   max-width: 900px;
-  height: auto; /* ❗ para que cresça conforme o conteúdo */
+  height: auto;
   text-align: center;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
 }
