--- a/public/screens/Curso1.css
+++ b/public/screens/Curso1.css
@@ -1,51 +1,18 @@
-.link-1-curso,
-.link-1-curso * {
-  box-sizing: border-box;
-}
-.link-1-curso {
-  background: #1e3a8a;
-  height: 840px;
-  position: relative;
-  overflow: hidden;
-}
-.image-4 {
-  width: 243px;
-  height: 182px;
-  position: absolute;
-  left: 18px;
-  top: 238px;
-  object-fit: cover;
-  aspect-ratio: 243/182;
-}
-.rectangle-15 {
+
+.cards{
   background: #bfdbfe;
   width: 410px;
   height: 408px;
   position: absolute;
   left: 290px;
   top: 228px;
-}
-.a-tecnologia-da-informa-o-ti-um-dos-pilares-fundamentais-da-era-digital-desempenhando-um-papel-estrat-gico-na-inova-o-automa-o-e-otimiza-o-de-processos-em-empresas-e-na-sociedade-ela-engloba-um-amplo-conjunto-de-recursos-tecnol-gicos-e-computacionais-utilizados-para-a-coleta-armazenamento-processamento-e-transmiss-o-de-dados-promovendo-efici-ncia-seguran-a-e-intelig-ncia-nas-opera-es-desde-a-infraestrutura-de-hardware-e-software-at-a-ciberseguran-a-e-a-computa-o-em-nuvem-a-ti-impulsiona-a-transforma-o-digital-e-a-tomada-de-decis-es-baseadas-em-dados-seu-impacto-se-estende-a-diversos-setores-como-sa-de-educa-o-finan-as-e-ind-stria-tornando-se-essencial-para-a-competitividade-e-o-crescimento-sustent-vel-das-organiza-es-no-cen-rio-global-a-programa-o-tem-um-papel-central-na-ti-pois-permite-o-desenvolvimento-de-sistemas-aplicativos-e-solu-es-tecnol-gicas-que-impulsionam-a-inova-o-e-a-automa-o {
   color: #374151;
   text-align: left;
   font-family: "Inter-Regular", sans-serif;
   font-size: 14px;
-  font-weight: 400;
-  position: absolute;
-  left: 306px;
-  top: 238px;
-  width: 385px;
-  height: 360px;
+
 }
-.rectangle-12 {
-  background: #000000;
-  border-radius: 30px;
-  width: 117px;
-  height: 25px;
-  position: absolute;
-  left: 574px;
-  top: 598px;
-}
+
 .voltar {
   color: #1e3a8a;
   text-align: left;
