--- a/public/screens/styleAll.css
+++ b/public/screens/styleAll.css
@@ -8,12 +8,16 @@ html, body {
   height: 100%;
   width: 100%;
   font-family: Arial, sans-serif;
+  background-color: #1e3a8a; /* Azul principal */
+  color: #fff;
 }
 
 .container {
-  height: 100vh;  /* 100% da altura da viewport */
-  width: 100vw;   /* 100% da largura da viewport */
-  display: flex;
-  align-items: center;      /* Centraliza verticalmente */
-  background-color: #1e3a8a;
+/*  width: 100%;
+  max-width: 1200px; */
+  margin: 0 auto;
+}
+
+button {
+  cursor: pointer;
 }
